--- a/Index.html
+++ b/Index.html
@@ -10,24 +10,25 @@
   <body>
   <div class="header">Crypto Calculator<button class="menu">Menu</button></div>
   <div class="section1">
-    <h1 class="title">Profits Calculator</h1>
+    <h1 class="title">Profits Calculator | XMR</h1>
     <div class="inner-section1">
       <input type="number" class="input" placeholder="Hashrate Mh/s"/><br>
-      <input type="number" class="input" placeholder="Watts"/><br>
-      <input type="number" class="input" placeholder="Electricity costs Kwh"/><br>
+      <input type="number" value="400" class="input" placeholder="Watts"/><br>
+      <input type="number" value="0.1" class="input" placeholder="Electricity costs Kwh"/><br>
       <div class="dropdown">
         <select class="mdb-select-md-form" searchable="Search here..">
-          <option value="" disabled selected>Choose Currency</option>
-          <option value="1">USA</option>
-          <option value="2">Germany</option>
-          <option value="3">France</option>
-          <option value="3">Poland</option>
-          <option value="3">Japan</option>
+          <option>Choose Currency</option>
+          <option value="1">AUD</option>
+          <option value="2">USD</option>
+          <option value="3">NZD</option>
+          <option value="3">JPY</option>
+          <option value="3">PND</option>
         </select>
+        <button class="calculate">calculate</button>
       </div>
-    </div>    <div class="answer">
       
-    </div>
+  </div>
+  <div class="answer">
   </div>
   </body>
 </html>
